[gd_scene load_steps=20 format=3 uid="uid://d3fxdij8gxr2p"]

[ext_resource type="Script" path="res://Scripts/BasicPlayer.gd" id="1_jtj3m"]
[ext_resource type="SpriteFrames" uid="uid://tqtkw4xfceq6" path="res://sprites/Animations/PlayerController.tres" id="2_7dg1n"]
[ext_resource type="Theme" uid="uid://7xvcsbe3ap11" path="res://Theme/Default_Theme.tres" id="2_kn7tn"]
[ext_resource type="Texture2D" uid="uid://dkni6323n00ka" path="res://sprites/Black hole.png" id="2_lw2kk"]
[ext_resource type="Script" path="res://Scripts/MassBar.gd" id="3_01qbc"]
[ext_resource type="Script" path="res://Scripts/Projectile Launcher.gd" id="3_8vu7v"]
[ext_resource type="Script" path="res://Scripts/State Machine.gd" id="3_ad318"]
[ext_resource type="Script" path="res://Scripts/BlackholeSprite.gd" id="3_ff2ag"]
[ext_resource type="Script" path="res://Scripts/jump.gd" id="4_5f5su"]
[ext_resource type="Script" path="res://Scripts/side_attack.gd" id="4_e1qiq"]
[ext_resource type="Script" path="res://Scripts/idle.gd" id="4_p82wp"]
[ext_resource type="Script" path="res://Scripts/fall.gd" id="4_sobar"]
[ext_resource type="Script" path="res://Scripts/move.gd" id="5_3oo7e"]
[ext_resource type="Script" path="res://Scripts/gravity_well_launcher.gd" id="6_r2wab"]
[ext_resource type="Script" path="res://Scripts/crouch.gd" id="10_7v6uw"]
[ext_resource type="Script" path="res://Scripts/crouch_move.gd" id="11_4uaxc"]

[sub_resource type="CircleShape2D" id="CircleShape2D_rgyvi"]
radius = 9.0

[sub_resource type="RectangleShape2D" id="RectangleShape2D_bgiqm"]
size = Vector2(11, 28)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_a488x"]
size = Vector2(21.25, 22)

[node name="Player" type="CharacterBody2D"]
collision_layer = 4353
collision_mask = 4353
floor_stop_on_slope = false
script = ExtResource("1_jtj3m")
aiming_shooting_offset = Array[Vector2]([Vector2(0, -15), Vector2(10, -8), Vector2(13, 0), Vector2(10, 12), Vector2(0, 15), Vector2(-10, 12), Vector2(-13, 0), Vector2(-10, -8)])
aiming_animation_name = Array[String](["aiming_90", "aiming_45", "aiming_0", "aiming_n_45", "aiming_n_90"])

[node name="MassBar" type="ProgressBar" parent="."]
offset_left = -13.0
offset_top = -21.0
offset_right = 13.0
offset_bottom = -18.0
theme = ExtResource("2_kn7tn")
value = 25.0
show_percentage = false
script = ExtResource("3_01qbc")

[node name="Camera2D" type="Camera2D" parent="."]
position = Vector2(2, -33)
scale = Vector2(0.997601, 0.99516)
offset = Vector2(0, -20)
limit_top = -1000
limit_bottom = 700
limit_smoothed = true
position_smoothing_enabled = true
position_smoothing_speed = 6.0

[node name="Crouch Collider" type="CollisionShape2D" parent="."]
position = Vector2(0, 7)
shape = SubResource("CircleShape2D_rgyvi")
disabled = true

[node name="Stand Collider" type="CollisionShape2D" parent="."]
position = Vector2(0.5, 2)
shape = SubResource("RectangleShape2D_bgiqm")

[node name="gravity_well_visualizer" type="Sprite2D" parent="."]
position = Vector2(0, -25)
scale = Vector2(0.025, 0.025)
texture = ExtResource("2_lw2kk")
script = ExtResource("3_ff2ag")

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
visibility_layer = 4
sprite_frames = ExtResource("2_7dg1n")
animation = &"crouch"
frame = 4
frame_progress = 1.0

[node name="SideAttackArea" type="Area2D" parent="."]
collision_layer = 9
collision_mask = 9

[node name="CollisionShape2D" type="CollisionShape2D" parent="SideAttackArea"]
position = Vector2(-10.375, 1)
shape = SubResource("RectangleShape2D_a488x")
debug_color = Color(0.988235, 0, 0.286275, 0.419608)

[node name="projectile_launcher" type="Node2D" parent="." node_paths=PackedStringArray("idle_state", "move_state")]
script = ExtResource("3_8vu7v")
shooting_offset = Vector2(0, 3)
idle_state = NodePath("../State Machine/idle")
move_state = NodePath("../State Machine/move")

[node name="gravity_well_launcher" type="Node2D" parent="." node_paths=PackedStringArray("idle_state", "move_state")]
scale = Vector2(0.518168, 0.0699993)
script = ExtResource("6_r2wab")
idle_state = NodePath("../State Machine/idle")
move_state = NodePath("../State Machine/move")

[node name="State Machine" type="Node" parent="." node_paths=PackedStringArray("starting_state", "current_state", "side_attack_state")]
script = ExtResource("3_ad318")
starting_state = NodePath("fall")
current_state = NodePath("fall")
side_attack_state = NodePath("side_attack")

[node name="side_attack" type="Node" parent="State Machine" node_paths=PackedStringArray("fall_state", "jump_state", "move_state", "idle_state") groups=["Debug Group"]]
script = ExtResource("4_e1qiq")
fall_state = NodePath("../fall")
jump_state = NodePath("../jump")
move_state = NodePath("../move")
idle_state = NodePath("../idle")
animation_name = "attack"

[node name="Attack_Timer" type="Timer" parent="State Machine/side_attack"]

[node name="Damage_Delay_Timer" type="Timer" parent="State Machine/side_attack"]

[node name="fall" type="Node" parent="State Machine" node_paths=PackedStringArray("idle_state", "move_state", "jump_state")]
script = ExtResource("4_sobar")
idle_state = NodePath("../idle")
move_state = NodePath("../move")
jump_state = NodePath("../jump")
jump_buffer_time = 0.1
coyote_time = 0.15
gravity_constant = 1.0
animation_name = "jump_fall"
move_speed = 150.0

[node name="jump" type="Node" parent="State Machine" node_paths=PackedStringArray("fall_state", "idle_state", "move_state") groups=["Debug Group"]]
script = ExtResource("4_5f5su")
fall_state = NodePath("../fall")
idle_state = NodePath("../idle")
move_state = NodePath("../move")
jump_force = 425.0
animation_name = "jump_rise"
move_speed = 100.0

[node name="move" type="Node" parent="State Machine" node_paths=PackedStringArray("fall_state", "idle_state", "jump_state") groups=["Debug Group"]]
script = ExtResource("5_3oo7e")
fall_state = NodePath("../fall")
idle_state = NodePath("../idle")
jump_state = NodePath("../jump")
aim_move_speed = 100.0
aiming_animation_name = Array[String](["aiming_90", "aiming_45", "aiming_0", "aiming_n_45", "aiming_n_90"])
animation_name = "move"

[node name="idle" type="Node" parent="State Machine" node_paths=PackedStringArray("fall_state", "jump_state", "move_state", "crouch_state", "crouch_move_state") groups=["Debug Group"]]
script = ExtResource("4_p82wp")
fall_state = NodePath("../fall")
jump_state = NodePath("../jump")
move_state = NodePath("../move")
crouch_state = NodePath("../crouch")
crouch_move_state = NodePath("../crouch_move")
landing_animation_name = "jump_land"
standing_animation_name = "stand"
aiming_animation_name = "aiming_0"
animation_name = "idle"

[node name="crouch" type="Node" parent="State Machine" node_paths=PackedStringArray("fall_state", "jump_state", "move_state", "idle_state") groups=["Debug Group"]]
script = ExtResource("10_7v6uw")
fall_state = NodePath("../fall")
jump_state = NodePath("../jump")
move_state = NodePath("../crouch_move")
idle_state = NodePath("../idle")
animation_name = "crouch"

[node name="crouch_move" type="Node" parent="State Machine" node_paths=PackedStringArray("fall_state", "idle_state", "jump_state")]
script = ExtResource("11_4uaxc")
fall_state = NodePath("../fall")
idle_state = NodePath("../crouch")
jump_state = NodePath("../jump")
animation_name = "crouch_move"
move_speed = 300.0
